# pydata-paris-2025-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
housing/: index.html  training.ipynb
text_summarizer/: index.html  worker.js
