[project]
name = "pydata-paris-2025"
version = "0.0.0"
description = "Romain Clement's talks materials for PyData Paris 2025 conference"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
requires-python = "==3.13.*"
dependencies = [
    "matplotlib>=3.10.6",
    "onnxruntime>=1.23.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "skl2onnx>=1.19.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "ruff>=0.13.1",
]
